Fix editors name
@bialpo I am adding the repositories to [IPR](https://labs.w3.org/repo-manager). My name is automatically added as an editor. Please add there are any other editors than you. Thanks!

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         specStatus: "CG-DRAFT",
         shortName: "real-world-geometry",
         editors: [{
-          name: "Yönet"
+          name: "bialpo"
         }]
       };
     </script>
