--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         specStatus: "CG-DRAFT",
         shortName: "real-world-geometry",
         editors: [{
-          name: "bialpo"
+          name: "Piotr Bialecki (@bialpo)"
         }]
       };
     </script>
